Implement EARN-E Enode device deletion (#165)